BugFix: Load data file successfully after package